--- a/loaders/rocket.less
+++ b/loaders/rocket.less
@@ -19,7 +19,7 @@
   background-position: center 20px, center 2px;
   background-repeat: no-repeat;
   box-sizing: border-box;
-  animation: animloaderBack 1s linear infinite alternate;
+  animation: rocketAnimationBack 1s linear infinite alternate;
 }
 .loader::before {
   content: "";
@@ -53,10 +53,10 @@
   background-size: 100px 100px;
   box-shadow: 4px 4px 12px 0px rgba(255, 61, 0, 0.5);
   box-sizing: border-box;
-  animation: animloader 1s linear infinite alternate;
+  animation: rocketAnimation 1s linear infinite alternate;
 }
 
-@keyframes animloaderBack {
+@keyframes rocketAnimationBack {
   0%,
   30%,
   70% {
@@ -69,7 +69,7 @@
   }
 }
 
-@keyframes animloader {
+@keyframes rocketAnimation {
   0% {
     box-shadow: 4px 4px 12px 2px rgba(255, 61, 0, 0.75);
     width: 34px;
